Fix mobileNav z-index to display it on top off main content

--- a/client/src/components/navigation/mobileNav/mobileNav.css
+++ b/client/src/components/navigation/mobileNav/mobileNav.css
@@ -34,6 +34,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  z-index: 30;
+
   .nav-item {
     order: 0;
   }
